# vara-agent-notarizer

./: .binpath  Cargo.toml  README.md  build.rs  skills.md  vara_agent_notarizer.idl
app/: Cargo.toml
app/src/: lib.rs  notarizer.rs  types.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
scripts/: inject_idl.py
src/: lib.rs
tests/: gtest.rs
