[package]
name = "vara-agent-notarizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Vara Agent Notarizer - on-chain notarization and attestation service for AI agents"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
vara-agent-notarizer-app.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }
vara-agent-notarizer-app.workspace = true
vara-agent-notarizer-client.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
vara-agent-notarizer-app.workspace = true

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["VibeMyCode"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/VibeMyCode/vara-agent-notarizer"
license = "MIT"
keywords = ["gear", "sails", "notarizer", "attestation", "vara"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.3"
tokio = "1.48.0"
vara-agent-notarizer-app = { version = "0.1.0", path = "app" }
vara-agent-notarizer-client = { version = "0.1.0", path = "client" }
